# mkdocs-git-authors-plugin

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  contributing.html  index.html  mailmap.html  mkdocs.yml  options.html  pyproject.toml  setup.py  sitemap.xml  usage.html
.devcontainer/: devcontainer.json
.github/workflows/: pythonpublish.yml  unittests.yml  unittests_codecov.yml  workflow.yml
docs/: contributing.md  index.md  mailmap.md  options.md  usage.md
docs/overrides/: main.html
docs/theme/: main.html
mkdocs_git_authors_plugin/: .coveragerc  ci.py  exclude.py  plugin.py  repo.py  util.py
mkdocs_git_authors_plugin/git/: author.py  command.py  commit.py  page.py  repo.py
search/: search_index.json
src/mkdocs_git_authors_plugin/: config.py  plugin.py
src/mkdocs_git_authors_plugin/git/: commit.py  page.py  repo.py
test/: test_basic.py  test_requirements.txt  test_util.py
test/basic_setup/: mkdocs.yml
test/basic_setup/docs/: index.md
tests/: test_basic.py  test_requirements.txt  test_util.py
tests/basic_setup/: gen_pages.py  mkdocs.yml  mkdocs_add_co_authors.yml  mkdocs_complete_material.yml  mkdocs_complete_material_disabled.yml  mkdocs_complete_material_strict.yml  mkdocs_complete_material_strict_false.yml  mkdocs_custom_href.yml  mkdocs_exclude.yml  mkdocs_fallback.yml  mkdocs_genfiles.yml  mkdocs_ignore_authors.yml  mkdocs_mkapi.yml  mkdocs_no_email.yml  mkdocs_w_contribution.yml  mkdocs_w_contribution_and_author_threshold.yml  mkdocs_w_contribution_sort_and_author_threshold.yml  mkdocs_w_macros.yml
tests/basic_setup/docs/: index.md  page_with_co_authors.md  page_with_tag.md  (+1 more)
tests/custom_docs_dir/: mkdocs.yml
(+2 files in other folders)
