[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-git-authors-plugin"
description = "Mkdocs plugin to display git authors of a page"
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
authors = [
    {name = "Tim Vink", email = "vinktim@gmail.com"}
]
keywords = ["mkdocs", "git", "contributors", "committers", "authors", "plugin"]
urls = {Homepage = "https://github.com/timvink/mkdocs-git-authors-plugin"}
version = "0.9.3"
requires-python = ">=3.8"
dependencies = ["mkdocs>=1.0"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]

[project.entry-points."mkdocs.plugins"]
git-authors = "mkdocs_git_authors_plugin.plugin:GitAuthorsPlugin"

[dependency-groups]
dev = [
    "click>=8.1.8",
    "codecov>=2.1.13",
    "gitpython>=3.1.44",
    "mkapi!=2.0.*",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.4",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
